2006-01-23 Ales Hvezda   <ahvezda@geda.seul.org>

	* po/*: auto* tools update all po files for distribution.

2006-01-22 Ales Hvezda   <ahvezda@geda.seul.org>

	* autogen.sh, m4/gettext.m4: Removed files from CVS since they are
	installation specific

2006-01-16 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Bumped package version to 20060123

        * README: Updated for the new year and release.

2006-01-07  Stuart Brorson  <sdb AT cloud9 DOT net>
        * autogen.sh, m4/gettext.m4:  Included "-I m4" into
        aclocal to pick up macros from local m4 dir.
	
2005-09-27 18:46  Dan McMahill <danmc>

        * graphman/configfile.c, src/configfile.c: remove various compiler
          warnings

2005-09-05 Ales Hvezda   <ahvezda@geda.seul.org>

        * po/it.po: Updated the Italian translation by Petrecca Michele.

2005-08-20 Ales Hvezda   <ahvezda@geda.seul.org>

        * po/it.po: Updated the Italian translation by Petrecca Michele.

2005-08-20 Werner Hoch <werner.ho@gmx.de>

	* po/de_DE.pe: updated translation

2005-08-19 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Bumped the package version to 20050820 which will be
        a real snapshot.

2005-08-14 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Updated package version to 20050814.  This is a 
        temporary version and not a real release number.

2005-05-10 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/task.c: Fixed a nasty crash.  In StrReplace(), realloc
	may return a completely new pointer which needs to be assigned
	and used.  This modified pointer also needed to be returned
	from StrReplace().  Note, gManager will not quite work right with
	files (schematics/pcb/etc...) that do not live in the project 
	directory.  This bug was logged against the debian packages.

2005-03-25 Werner Hoch <werner.ho@gmx.de>
	* src/project.c: added file check, geda hang if theres no file
	  selection or selection is a directory (Bug #156)
