@@ -1,3 +1,8 @@
+2006-03-02 Stuart Brorson <sdb [AT] cloud9 [DOT] net>
+	* filechoose.[ch]: Applied patch from Andy Spenser to update
+	file chooser to GtkFileSelectorWhatever ....  Moved filesel.[ch] to
+	filechoose.[ch]. 
+	
 2006-01-23 Ales Hvezda   <ahvezda@geda.seul.org>
 
 	* po/*: auto* tools update all po files for distribution.
